--- a/css/la_palette_du_goût.css
+++ b/css/la_palette_du_goût.css
@@ -96,7 +96,7 @@ a:visited {
     position: absolute;
     right: 0;
     background-color: #99E2D0;
-    padding: 1.73em;
+    height: 100%;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 16px;
     top: 0;
@@ -108,14 +108,18 @@ a:visited {
             transition-duration: 700ms;
     -webkit-transition-timing-function: ease-out;
             transition-timing-function: ease-out;
-    width: 5%;
-    z-index: 9999;
+    width: 0%;
+    /* To overlap the price div perhaps it's temporary */
+    z-index: 1;
   }
   .check_validate .fa-check-circle {
-    font-size: 1.8em;
+    font-size: 2.5em;
     color: white;
     -webkit-transition-duration: 700ms;
             transition-duration: 700ms;
+    position: relative;
+    top: .5em;
+    left: .5em;
   }
   /* GENERAL RULES OF ANIMATION FOR ALL FOOD MENUS */
   @-webkit-keyframes rotation {
@@ -138,16 +142,17 @@ a:visited {
               transform: rotate(0);
     }
   }
-  /* GENERAL RULES OF ANIMATION FOR ALL FOOD MENUS */
+  .item {
+    overflow: hidden;
+  }
   .item:hover > .check_validate {
-    width: 15%;
-    -webkit-transition-duration: 2s;
-            transition-duration: 2s;
+    width: 6em;
   }
   .item:hover > .check_validate > .fa-check-circle {
     -webkit-animation: rotation 700ms ease-out;
             animation: rotation 700ms ease-out;
   }
+  /* END GENERAL RULES OF ANIMATION FOR ALL FOOD MENUS */
   /* STARTER */
   .starter {
     font-family: "Roboto", sans-serif;
