The .item__price hover is almost fixed the only thing left is to find how add three point on paragraph when the <p> is too long

--- a/css/la_palette_du_goût.css
+++ b/css/la_palette_du_goût.css
@@ -152,6 +152,13 @@ a:visited {
     -webkit-animation: rotation 700ms ease-out;
             animation: rotation 700ms ease-out;
   }
+  .item__price {
+    -webkit-transition: padding-right 700ms ease-out;
+    transition: padding-right 700ms ease-out;
+  }
+  .item:hover > .item__price {
+    padding-right: 6em;
+  }
   /* END GENERAL RULES OF ANIMATION FOR ALL FOOD MENUS */
   /* STARTER */
   .starter {
