--- a/css/la_palette_du_goût.css
+++ b/css/la_palette_du_goût.css
@@ -70,7 +70,7 @@ a:visited {
         -ms-flex-direction: column;
             flex-direction: column;
     position: relative;
-    margin-bottom: 4em;
+    padding-bottom: 3.5em;
   }
   .food_menu header {
     display: -webkit-box;
@@ -288,6 +288,8 @@ a:visited {
     cursor: pointer;
     -webkit-box-shadow: -1px 1px 7px rgba(0, 0, 0, 0.5);
             box-shadow: -1px 1px 7px rgba(0, 0, 0, 0.5);
+    width: 10em;
+    margin: 0 auto;
   }
   .button a {
     color: white;
