--- a/css/la_palette_du_goût.scss
+++ b/css/la_palette_du_goût.scss
@@ -33,6 +33,7 @@ a:visited
 {
    color:#353535;
 }
+
 @media screen and (min-width: 320px) and (max-width:767px)
 {
     
@@ -457,3 +458,77 @@ a:visited
 
 
 
+@media screen and (max-width:414px) 
+
+{
+    
+ .food_menu .item
+{
+
+    font-size: .62em;
+
+}
+
+.food_menu header .far
+{
+    position: absolute;
+    right:0.7em;
+}
+
+/************************* TRUNCATE EFFECT *************************/
+
+
+/* STARTER */
+
+    .starter > .item:hover:last-child > .item--description > p
+    {
+          width: 100px;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+        
+    }
+
+/* MAIN COURSE */
+
+    .main_course > .item:hover:nth-child(2) > .item--description > p
+    {
+        width: 100px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+
+        
+    }
+    .main_course > .item:hover:nth-child(3) > .item--description > p
+    {
+        width: 100px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+
+    }
+
+/* DESSERTS */
+
+
+    .desserts > .item:hover:nth-child(3) > .item--description > p
+    {
+        width: 100px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+
+        
+    }
+    .desserts > .item:hover:nth-child(4) > .item--description > p
+    {
+        width: 100px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+
+    }
+
+/* Les modifications nécessaires seront faites dans la soirée */
+}
