--- a/css/main.css
+++ b/css/main.css
@@ -339,10 +339,26 @@
     bottom: 27px;
   }
   .item-2 .heart_animation .fa-heart {
-    background: -webkit-gradient(linear, left top, right bottom, from(#FF79DA), to(#9356DC));
-    background: linear-gradient(to bottom right, #FF79DA, #9356DC);
+    background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
+    background: linear-gradient(to top, #FF79DA, #9356DC);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent !important;
+  }
+  .item-2 .heart_animation .fa-heart::after {
+    content: '\f004';
+    position: relative;
+    right: 1.7em;
+    font-size: .4em;
+    bottom: 25px;
+    -webkit-transition: -webkit-transform 500ms ease-in;
+    transition: -webkit-transform 500ms ease-in;
+    transition: transform 500ms ease-in;
+    transition: transform 500ms ease-in, -webkit-transform 500ms ease-in;
+    display: inline-block;
+    font-weight: bold;
+    cursor: pointer;
+    top: -6px;
+    visibility: hidden;
   }
   .item-2:visited {
     color: black;
@@ -354,6 +370,11 @@
     height: 152px;
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
+  }
+  .heart_animation:hover > .fa-heart::after {
+    visibility: visible;
+    -webkit-transform: scale(2.3);
+            transform: scale(2.3);
   }
   /* END OF SECTION -4 */
   /* FOOTER */
