--- a/css/main.scss
+++ b/css/main.scss
@@ -411,7 +411,7 @@ $simulate_link_presence:pointer;
 &  .fa-heart {
    background:linear-gradient(to top,$secondary_color,$primary_color);
    -webkit-background-clip: text;
-   -webkit-text-fill-color:transparent !important;
+   -webkit-text-fill-color:transparent;
     
     &::after
         {
