--- a/css/main.css
+++ b/css/main.css
@@ -342,7 +342,7 @@
     background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
     background: linear-gradient(to top, #FF79DA, #9356DC);
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent !important;
+    -webkit-text-fill-color: transparent;
   }
   .item-2 .heart_animation .fa-heart::after {
     content: '\f004';
