--- a/css/la_palette_du_goût.css
+++ b/css/la_palette_du_goût.css
@@ -131,7 +131,7 @@ a:visited {
     top: -6px;
     visibility: hidden;
   }
-  .heart_animation:hover > .fa-heart::after {
+  .heart_animation:active > .fa-heart::after {
     visibility: visible;
     -webkit-transform: scale(2.3);
             transform: scale(2.3);
