--- a/css/la_palette_du_goût.scss
+++ b/css/la_palette_du_goût.scss
@@ -174,7 +174,7 @@ a:visited
         }
 
         
-        .heart_animation:hover > .fa-heart::after
+        .heart_animation:active > .fa-heart::after
         {
           visibility:visible;
           transform:scale(2.3);
