--- a/css/la_palette_du_goût.scss
+++ b/css/la_palette_du_goût.scss
@@ -136,9 +136,7 @@ a:visited
                     }
 
                     & .far{
-                        background:linear-gradient(to top,$secondary_color,$primary_color);
-                        -webkit-background-clip: text;
-                        -webkit-text-fill-color:transparent;
+                       
                         font-size: 1.8em;
                         position: absolute;
                         top:0.20em;
@@ -173,9 +171,15 @@ a:visited
            
         }
 
-        
-        .heart_animation:hover > .fa-heart::after
+        .heart_animation:active > .fa-heart
         {
+            background:linear-gradient(to top,$secondary_color,$primary_color);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color:transparent;
+        }
+        .heart_animation:active > .fa-heart::after
+        {
+           
           visibility:visible;
           transform:scale(2.3);
         }
@@ -406,8 +410,8 @@ a:visited
                                 }
                             }
                         
-                            .button{
-                        
+                            .button
+                            { 
                                 padding:0.9em 1.5em;
                                 border-radius: 30px;
                                 /* Temporary */
@@ -427,6 +431,7 @@ a:visited
                                     }
 
                                     
+                                 
                                  
                             }
                             
