--- a/css/la_palette_du_goût.scss
+++ b/css/la_palette_du_goût.scss
@@ -435,7 +435,11 @@ a:visited
                                     }
 
                                     
-                                 
+                                    &:hover{
+                                        opacity: 0.9;
+                                        box-shadow: 1px 1px 10px rgba(0,0,0,0.5);
+                                        
+                                    }
                                  
                             }
                             
