--- a/css/la_note_enchantée.css
+++ b/css/la_note_enchantée.css
@@ -53,6 +53,23 @@ a:visited {
     width: 100%;
   }
   /* END OF CONTAINER */
+  /* FOOD_MENU ANIMATION */
+  @-webkit-keyframes FadeInFadeOut {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  @keyframes FadeInFadeOut {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
   /* FOOD_MENU */
   .food_menu {
     background-color: #F6F6F6;
@@ -70,7 +87,7 @@ a:visited {
         -ms-flex-direction: column;
             flex-direction: column;
     position: relative;
-    margin-bottom: 4em;
+    padding-bottom: 3.5em;
   }
   .food_menu header {
     display: -webkit-box;
@@ -91,12 +108,40 @@ a:visited {
     top: 0.20em;
     right: 1.2em;
     font-weight: 100;
+    cursor: pointer;
+  }
+  .food_menu header .far::after {
+    content: '\f004';
+    position: relative;
+    right: 1.7em;
+    font-size: .4em;
+    bottom: 25px;
+    -webkit-transition: -webkit-transform 500ms ease-in;
+    transition: -webkit-transform 500ms ease-in;
+    transition: transform 500ms ease-in;
+    transition: transform 500ms ease-in, -webkit-transform 500ms ease-in;
+    display: inline-block;
+    font-weight: bold;
+    cursor: simulate_link_presence;
+    top: -6px;
+    visibility: hidden;
+  }
+  .heart_animation:active > .fa-heart {
+    background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
+    background: linear-gradient(to top, #FF79DA, #9356DC);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  .heart_animation:active > .fa-heart::after {
+    visibility: visible;
+    -webkit-transform: scale(2.3);
+            transform: scale(2.3);
   }
   .check_validate {
     position: absolute;
     right: 0;
     background-color: #99E2D0;
-    padding: 1.73em;
+    height: 100%;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 16px;
     top: 0;
@@ -108,14 +153,18 @@ a:visited {
             transition-duration: 700ms;
     -webkit-transition-timing-function: ease-out;
             transition-timing-function: ease-out;
-    width: 5%;
-    z-index: 9999;
+    width: 0%;
+    /* To overlap the price div perhaps it's temporary */
+    z-index: 1;
   }
   .check_validate .fa-check-circle {
-    font-size: 1.8em;
+    font-size: 2.5em;
     color: white;
     -webkit-transition-duration: 700ms;
             transition-duration: 700ms;
+    position: relative;
+    top: .5em;
+    left: .5em;
   }
   /* GENERAL RULES OF ANIMATION FOR ALL FOOD MENUS */
   @-webkit-keyframes rotation {
@@ -138,19 +187,29 @@ a:visited {
               transform: rotate(0);
     }
   }
-  /* GENERAL RULES OF ANIMATION FOR ALL FOOD MENUS */
-  .item:hover > .check_validate {
-    width: 15%;
-    -webkit-transition-duration: 2s;
-            transition-duration: 2s;
+  .item {
+    overflow: hidden;
   }
-  .item:hover > .check_validate > .fa-check-circle {
+  .item:active > .check_validate {
+    width: 6em;
+  }
+  .item:active > .check_validate > .fa-check-circle {
     -webkit-animation: rotation 700ms ease-out;
             animation: rotation 700ms ease-out;
   }
+  .item__price {
+    -webkit-transition: padding-right 700ms ease-out;
+    transition: padding-right 700ms ease-out;
+  }
+  .item:active > .item__price {
+    padding-right: 6em;
+  }
+  /* END GENERAL RULES OF ANIMATION FOR ALL FOOD MENUS */
   /* STARTER */
   .starter {
     font-family: "Roboto", sans-serif;
+    -webkit-animation: FadeInFadeOut 1.5s ease-in-out;
+            animation: FadeInFadeOut 1.5s ease-in-out;
   }
   .starter .starter--title {
     font-family: "Roboto", sans-serif;
@@ -189,6 +248,8 @@ a:visited {
   }
   .main_course {
     font-family: "Roboto", sans-serif;
+    -webkit-animation: FadeInFadeOut 2.5s ease-in-out;
+            animation: FadeInFadeOut 2.5s ease-in-out;
   }
   .main_course .main_course--title {
     font-weight: 500;
@@ -228,6 +289,8 @@ a:visited {
   .desserts {
     font-family: "Roboto", sans-serif;
     margin-bottom: 2em;
+    -webkit-animation: FadeInFadeOut 3.5s ease-in-out;
+            animation: FadeInFadeOut 3.5s ease-in-out;
   }
   .desserts .desserts--title {
     font-weight: 500;
@@ -276,9 +339,16 @@ a:visited {
     cursor: pointer;
     -webkit-box-shadow: -1px 1px 7px rgba(0, 0, 0, 0.5);
             box-shadow: -1px 1px 7px rgba(0, 0, 0, 0.5);
+    width: 10em;
+    margin: 0 auto;
   }
   .button a {
     color: white;
+  }
+  .button:hover {
+    opacity: 0.9;
+    -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
+            box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
   }
   /* END OF MENU */
   /* FOOTER */
@@ -323,6 +393,9 @@ a:visited {
     top: 2px;
     font-size: 0.9em;
   }
+  .icon_description #proposal {
+    color: white;
+  }
   .icon_description--2 {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -338,6 +411,11 @@ a:visited {
     top: 2px;
     font-size: 0.9em;
   }
+  .icon_description--2 #partnership {
+    color: white;
+    position: relative;
+    right: .3em;
+  }
   .list {
     position: relative;
     right: 39px;
@@ -348,8 +426,54 @@ a:visited {
   .list li {
     line-height: 30px;
   }
+  .list .footer_link {
+    color: white;
+  }
   /* END OF FOOTER */
 }
 
 /* END OF MEDIA QUERIES */
+@media screen and (max-width: 414px) {
+  .food_menu .item {
+    font-size: .62em;
+  }
+  .food_menu header .far {
+    position: absolute;
+    right: 0.1em;
+  }
+  /************************* TRUNCATE EFFECT *************************/
+  /* STARTER */
+  .starter > .item:active:nth-child(4) > .item--description > h2 {
+    width: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  .starter > .item:active:nth-child(5) > .item--description > h2 {
+    width: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  /* MAIN COURSE */
+  .main_course > .item:active:nth-child(2) > .item--description > h2 {
+    width: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  /* DESSERTS */
+  .desserts > .item:active:nth-child(2) > .item--description > h2 {
+    width: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  .desserts > .item:active:nth-child(2) > .item--description > p {
+    width: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+}
 /*# sourceMappingURL=la_note_enchantée.css.map */
