--- a/css/la_note_enchantée.scss
+++ b/css/la_note_enchantée.scss
@@ -19,7 +19,8 @@ $simulate_link_presence:pointer;
 
 
 
-*{
+*
+{
     margin: 0;
     padding: 0;
     text-decoration: none;
@@ -27,12 +28,17 @@ $simulate_link_presence:pointer;
 }
 
 
-a{
-    color:#353535;}
+a
+{
+    color:#353535;
+}
+
+
 a:visited
 {
    color:#353535;
 }
+
 @media screen and (min-width: 320px) and (max-width:767px)
 {
     
@@ -83,6 +89,24 @@ a:visited
     
     /* END OF CONTAINER */
 
+
+
+    /* FOOD_MENU ANIMATION */
+
+    @keyframes FadeInFadeOut 
+
+    {
+
+     from{
+         opacity:0;
+     }
+
+     to{
+         opacity:1;
+     }
+    }
+    
+
     /* FOOD_MENU */
     .food_menu
     {
@@ -96,7 +120,7 @@ a:visited
         display:flex;
         flex-direction: column;
         position: relative;
-        margin-bottom: 4em;
+        padding-bottom:3.5em;
         
             & header
             {
@@ -112,19 +136,59 @@ a:visited
                     }
 
                     & .far{
+                       
                         font-size: 1.8em;
                         position: absolute;
                         top:0.20em;
                         right:1.2em;
                         font-weight: 100;
-                    
+                        cursor:$simulate_link_presence;
+
+                        &::after
+                        {
+                            content:'\f004';   
+                            position:relative;
+                            right:1.7em;
+                            font-size:.4em;
+                            bottom:25px;
+                            transition: transform 500ms ease-in;
+                            display:inline-block;
+                            font-weight:bold;
+                            cursor:simulate_link_presence;
+                            top:-6px;
+                            visibility:hidden;
+                        }
+                        
                     }
+
+
+                   
+
 
                     
             }
 
+           
         }
+
+
+        .heart_animation:active > .fa-heart
+        {
+            background:linear-gradient(to top,$secondary_color,$primary_color);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color:transparent;
+        }
+
         
+
+        .heart_animation:active > .fa-heart::after
+        {
+           
+          visibility:visible;
+          transform:scale(2.3);
+        }
+
+
         
      .check_validate
      {
@@ -132,20 +196,25 @@ a:visited
             position: absolute;
             right:0;
             background-color:$tertiary_color;
-            padding:1.73em;
+            height:100%;
             border-top-right-radius: 20px;
             border-bottom-right-radius: 16px;
             top:0;
             transition-property: width,transform;
             transition-duration:700ms;
             transition-timing-function:ease-out;
-            width:5%;
-            z-index:9999;
+            width:0%;
+            /* To overlap the price div perhaps it's temporary */
+            z-index: 1;
+            
                & .fa-check-circle
                {
-                    font-size:1.8em;
-                   color:white;
-                   transition-duration:700ms;
+                    font-size:2.5em;
+                    color:white;
+                    transition-duration:700ms;
+                    position:relative;
+                    top:.5em;
+                    left:.5em;
                   
                }
              
@@ -168,30 +237,48 @@ a:visited
             }
     }
 
-
-    /* GENERAL RULES OF ANIMATION FOR ALL FOOD MENUS */
-    .item:hover > .check_validate
+   
+    .item{
+        overflow:hidden;
+    }
+    
+    .item:active > .check_validate
     {
         
-         width:15%;
-         transition-duration: 2s;
+         width:6em;
+         
 
          
     }
 
 
-    .item:hover > .check_validate > .fa-check-circle
+    .item:active > .check_validate > .fa-check-circle
     {
 
          animation: rotation 700ms ease-out;
 
     }
 
+    .item__price
+    {
+        // Temporary rules
+        transition: padding-right 700ms ease-out;
+    }
+
+    .item:active > .item__price
+    {
+        // Temporary rules
+        padding-right: 6em;        
+    }
+
+    /* END GENERAL RULES OF ANIMATION FOR ALL FOOD MENUS */
+
 
     /* STARTER */
 
     .starter{
         font-family: $FRoboto;
+        animation : FadeInFadeOut 1.5s ease-in-out;
 
             & .starter--title{
                 font-family:$FRoboto;
@@ -204,6 +291,7 @@ a:visited
                 border-width: 0.21em;
                 padding-bottom: .3em;
                 width: 2.6em;
+
             }
             & .item{
                 display:flex;
@@ -237,6 +325,7 @@ a:visited
                             .main_course
                             {
                                 font-family:$FRoboto;
+                                animation : FadeInFadeOut 2.5s ease-in-out;
                         
                                     & .main_course--title
                                     {
@@ -282,6 +371,7 @@ a:visited
                         
                                 font-family:$FRoboto;
                                 margin-bottom: 2em;
+                                animation : FadeInFadeOut 3.5s ease-in-out;
                                 & .desserts--title
                                 {
                                     font-weight: 500;
@@ -306,6 +396,7 @@ a:visited
                                     margin-bottom:$item_margin_bottom;
                                     position:relative;
                                     font-size: .8em;
+                                    
                         
                                         & .item--description h2
                                             {
@@ -323,8 +414,8 @@ a:visited
                                 }
                             }
                         
-                            .button{
-                        
+                            .button
+                            { 
                                 padding:0.9em 1.5em;
                                 border-radius: 30px;
                                 /* Temporary */
@@ -334,13 +425,21 @@ a:visited
                                 text-align: center;
                                 cursor: $simulate_link_presence;
                                 box-shadow: -1px 1px 7px rgba(0,0,0,0.5);
+                                width: 10em;
+                                margin:0 auto;
         
         
                                     & a
                                     {
                                         color:white;
                                     }
+
                                     
+                                    &:hover{
+                                        opacity: 0.9;
+                                        box-shadow: 1px 1px 10px rgba(0,0,0,0.5);
+                                        
+                                    }
                                  
                             }
                             
@@ -383,12 +482,17 @@ a:visited
         position: relative;
         right:2.5em;
         cursor: $simulate_link_presence;
+
                 & .fas
                 {
                     position: relative;
                     top:2px;
                     font-size: 0.9em;
                     
+                }
+
+                & #proposal{
+                    color:$white;
                 }
 
     }
@@ -410,6 +514,12 @@ a:visited
                    
                     
                 }
+
+                & #partnership{
+                    color:$white;
+                    position: relative;
+                    right:.3em;
+                }
     }
 
     .list{
@@ -418,9 +528,14 @@ a:visited
         font-size: 1em;
         cursor: $simulate_link_presence;
         margin-bottom: 2em;
+    
             & li
             {
                 line-height: 30px;
+            }
+
+            & .footer_link{
+                color:$white;
             }
     }
 
@@ -432,3 +547,70 @@ a:visited
 
 
 
+@media screen and (max-width:414px) 
+
+{
+    
+ .food_menu .item
+{
+
+    font-size: .62em;
+
+}
+
+.food_menu header .far
+{
+    position: absolute;
+    right:0.1em;
+}
+
+/************************* TRUNCATE EFFECT *************************/
+
+/* STARTER */
+
+.starter > .item:active:nth-child(4) > .item--description > h2{
+    width: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.starter > .item:active:nth-child(5) > .item--description > h2{
+    width: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+/* MAIN COURSE */
+
+.main_course > .item:active:nth-child(2) > .item--description > h2{
+    width: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+
+/* DESSERTS */
+
+
+    .desserts > .item:active:nth-child(2) > .item--description > h2{
+        width: 100px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
+    .desserts > .item:active:nth-child(2) > .item--description > p
+    {
+        width: 100px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        
+    }
+
+
+
+}
