Adjusting banner img size maybe some changes gonna be later

--- a/css/la_note_enchantée.css
+++ b/css/la_note_enchantée.css
@@ -51,6 +51,10 @@ a:visited {
   }
   .container .banner img {
     width: 100%;
+    /* Temporary size */
+    height: 17em;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
   /* END OF CONTAINER */
   /* FOOD_MENU ANIMATION */
