--- a/css/la_note_enchantée.scss
+++ b/css/la_note_enchantée.scss
@@ -83,6 +83,9 @@ a:visited
            & img 
            {
                width: 100%;
+               /* Temporary size */
+               height:17em;
+               object-fit: cover;
             }
         }
     }
