--- a/css/la_palette_du_goût.css
+++ b/css/la_palette_du_goût.css
@@ -191,10 +191,10 @@ a:visited {
   .item {
     overflow: hidden;
   }
-  .item:hover > .check_validate {
+  .item:active > .check_validate {
     width: 6em;
   }
-  .item:hover > .check_validate > .fa-check-circle {
+  .item:active > .check_validate > .fa-check-circle {
     -webkit-animation: rotation 700ms ease-out;
             animation: rotation 700ms ease-out;
   }
@@ -202,7 +202,7 @@ a:visited {
     -webkit-transition: padding-right 700ms ease-out;
     transition: padding-right 700ms ease-out;
   }
-  .item:hover > .item__price {
+  .item:active > .item__price {
     padding-right: 6em;
   }
   /* END GENERAL RULES OF ANIMATION FOR ALL FOOD MENUS */
@@ -440,37 +440,37 @@ a:visited {
   }
   .food_menu header .far {
     position: absolute;
-    right: 0.7em;
+    right: 0.1em;
   }
   /************************* TRUNCATE EFFECT *************************/
   /* STARTER */
-  .starter > .item:hover:last-child > .item--description > p {
+  .starter > .item:active:last-child > .item--description > p {
     width: 100px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
   }
   /* MAIN COURSE */
-  .main_course > .item:hover:nth-child(2) > .item--description > p {
+  .main_course > .item:active:nth-child(2) > .item--description > p {
     width: 100px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
   }
-  .main_course > .item:hover:nth-child(3) > .item--description > p {
+  .main_course > .item:active:nth-child(3) > .item--description > h2 {
     width: 100px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
   }
   /* DESSERTS */
-  .desserts > .item:hover:nth-child(3) > .item--description > p {
+  .desserts > .item:active:nth-child(3) > .item--description > h2 {
     width: 100px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
   }
-  .desserts > .item:hover:nth-child(4) > .item--description > p {
+  .desserts > .item:active:nth-child(4) > .item--description > p {
     width: 100px;
     overflow: hidden;
     text-overflow: ellipsis;
