--- a/css/la_palette_du_goût.scss
+++ b/css/la_palette_du_goût.scss
@@ -242,7 +242,7 @@ a:visited
         overflow:hidden;
     }
     
-    .item:hover > .check_validate
+    .item:active > .check_validate
     {
         
          width:6em;
@@ -252,7 +252,7 @@ a:visited
     }
 
 
-    .item:hover > .check_validate > .fa-check-circle
+    .item:active > .check_validate > .fa-check-circle
     {
 
          animation: rotation 700ms ease-out;
@@ -265,7 +265,7 @@ a:visited
         transition: padding-right 700ms ease-out;
     }
 
-    .item:hover > .item__price
+    .item:active > .item__price
     {
         // Temporary rules
         padding-right: 6em;        
@@ -561,7 +561,7 @@ a:visited
 .food_menu header .far
 {
     position: absolute;
-    right:0.7em;
+    right:0.1em;
 }
 
 /************************* TRUNCATE EFFECT *************************/
@@ -569,7 +569,7 @@ a:visited
 
 /* STARTER */
 
-    .starter > .item:hover:last-child > .item--description > p
+    .starter > .item:active:last-child > .item--description > p
     {
           width: 100px;
           overflow: hidden;
@@ -580,7 +580,7 @@ a:visited
 
 /* MAIN COURSE */
 
-    .main_course > .item:hover:nth-child(2) > .item--description > p
+    .main_course > .item:active:nth-child(2) > .item--description > p
     {
         width: 100px;
         overflow: hidden;
@@ -588,7 +588,8 @@ a:visited
         white-space: nowrap;
         
     }
-    .main_course > .item:hover:nth-child(3) > .item--description > p
+
+    .main_course > .item:active:nth-child(3) > .item--description > h2
     {
         width: 100px;
         overflow: hidden;
@@ -596,11 +597,12 @@ a:visited
         white-space: nowrap;
 
     }
+   
 
 /* DESSERTS */
 
 
-    .desserts > .item:hover:nth-child(3) > .item--description > p
+    .desserts > .item:active:nth-child(3) > .item--description > h2
     {
         width: 100px;
         overflow: hidden;
@@ -609,7 +611,7 @@ a:visited
 
         
     }
-    .desserts > .item:hover:nth-child(4) > .item--description > p
+    .desserts > .item:active:nth-child(4) > .item--description > p
     {
         width: 100px;
         overflow: hidden;
