The issue with the heart active transition on chrom is fixed and we will repeat on other page later

--- a/css/le_délice_des_sens.scss
+++ b/css/le_délice_des_sens.scss
@@ -157,6 +157,9 @@ a:visited
                             cursor:simulate_link_presence;
                             top:-6px;
                             visibility:hidden;
+                            background:linear-gradient(to top,$secondary_color,$primary_color);
+                            -webkit-background-clip: text;
+                            background-clip: text;
                         }
                         
                     }
