--- a/css/la_palette_du_goût.css
+++ b/css/la_palette_du_goût.css
@@ -20,7 +20,7 @@ a:visited {
   color: #353535;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 320px) and (max-width: 992px) {
   /* HEADER */
   .back_to_homepage {
     display: -webkit-box;
@@ -114,7 +114,7 @@ a:visited {
   .food_menu header .far::after {
     content: '\f004';
     position: relative;
-    right: 1.7em;
+    right: 1.8em;
     font-size: .4em;
     bottom: 25px;
     -webkit-transition: -webkit-transform 500ms ease-in;
@@ -126,6 +126,10 @@ a:visited {
     cursor: simulate_link_presence;
     top: -6px;
     visibility: hidden;
+    background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
+    background: linear-gradient(to top, #FF79DA, #9356DC);
+    -webkit-background-clip: text;
+    background-clip: text;
   }
   .heart_animation:active > .fa-heart {
     background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
@@ -135,8 +139,8 @@ a:visited {
   }
   .heart_animation:active > .fa-heart::after {
     visibility: visible;
-    -webkit-transform: scale(2.3);
-            transform: scale(2.3);
+    -webkit-transform: scale(2.4);
+            transform: scale(2.4);
   }
   .check_validate {
     position: absolute;
