--- a/css/la_palette_du_goût.scss
+++ b/css/la_palette_du_goût.scss
@@ -148,7 +148,8 @@ a:visited
                         {
                             content:'\f004';   
                             position:relative;
-                            right:1.7em;
+                            // Mettre cette taille sur les autres
+                            right:1.8em;
                             font-size:.4em;
                             bottom:25px;
                             transition: transform 500ms ease-in;
@@ -157,6 +158,9 @@ a:visited
                             cursor:simulate_link_presence;
                             top:-6px;
                             visibility:hidden;
+                            background:linear-gradient(to top,$secondary_color,$primary_color);
+                            -webkit-background-clip: text;
+                            background-clip: text;
                         }
                         
                     }
@@ -185,7 +189,7 @@ a:visited
         {
            
           visibility:visible;
-          transform:scale(2.3);
+          transform:scale(2.4);
         }
 
 
