--- a/css/le_délice_des_sens.css
+++ b/css/le_délice_des_sens.css
@@ -19,7 +19,7 @@ a:visited {
   color: #353535;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 320px) and (max-width: 992px) {
   /* HEADER */
   .back_to_homepage {
     display: -webkit-box;
@@ -125,6 +125,10 @@ a:visited {
     cursor: simulate_link_presence;
     top: -6px;
     visibility: hidden;
+    background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
+    background: linear-gradient(to top, #FF79DA, #9356DC);
+    -webkit-background-clip: text;
+    background-clip: text;
   }
   .heart_animation:active > .fa-heart {
     background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
