--- a/css/la_palette_du_goût.css
+++ b/css/la_palette_du_goût.css
@@ -30,7 +30,6 @@ a:visited {
         -ms-flex-pack: center;
             justify-content: center;
     font-family: "Shrikhand", cursive;
-    font-weight: thin;
     padding-block: 0.6em;
   }
   .back_to_homepage .fas {
@@ -123,7 +122,7 @@ a:visited {
     transition: transform 500ms ease-in, -webkit-transform 500ms ease-in;
     display: inline-block;
     font-weight: bold;
-    cursor: simulate_link_presence;
+    cursor: pointer;
     top: -6px;
     visibility: hidden;
     background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
@@ -135,6 +134,7 @@ a:visited {
     background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
     background: linear-gradient(to top, #FF79DA, #9356DC);
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
   }
   .heart_animation:active > .fa-heart::after {
