--- a/css/main.scss
+++ b/css/main.scss
@@ -185,7 +185,7 @@ left:39px;
 
 }
 
-.description h1
+.description h2
 {
 font-weight:bold;
 margin-bottom: 15px;
@@ -258,14 +258,14 @@ position: relative;
 padding-left: 23px;
 padding-right: 15px;
 
-& h1
-{
+    & .h2
+    {
 
-font-size: 1.3em;
-margin-bottom: 1.1em;
-margin-right: 48px;
+    font-size: 1.3em;
+    margin-bottom: 1.1em;
+    margin-right: 48px;
 
-}
+    }
 }
 
 .item {
@@ -347,7 +347,7 @@ padding-top: 3em;
 font-family: $FRoboto;
 padding-right: 16px;
 padding-left:14px;
-& h1
+& .h2
 { 
 font-size: 1.3em;
 position: relative;
@@ -580,7 +580,7 @@ color:$white;
 @media screen and (min-width:0px) and (max-width:368px)
 {
 
-.description h1
+.description h2
 {
 position: relative;
 font-size: 1.1em;
