--- a/css/à_la_française.scss
+++ b/css/à_la_française.scss
@@ -159,6 +159,7 @@ a:visited
                             visibility:hidden;
                             background:linear-gradient(to top,$secondary_color,$primary_color);
                             -webkit-background-clip: text;
+                                    background-clip: text;
                             
                         }
                         
