--- a/css/la_palette_du_goût.css
+++ b/css/la_palette_du_goût.css
@@ -135,6 +135,7 @@ a:visited {
     background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
     background: linear-gradient(to top, #FF79DA, #9356DC);
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
   }
   .heart_animation:active > .fa-heart::after {
